updating img to .webp and sitemap

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -17,10 +17,12 @@ const ctaHref = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
   <div class="relative mx-auto grid max-w-6xl items-center gap-8 px-4 py-10 sm:gap-10 sm:py-16 md:grid-cols-2">
     <!-- Ilustración -->
     <img
-      src="/phones.png"
-      alt="Transferencias rápidas y seguras"
+      src="/img/phones.webp"
+      alt="ad global pay transfiriendo entre celulares desde usa a venezuela"
       class="mx-auto w-full max-w-xs sm:max-w-md drop-shadow-xl rounded-2xl"
       loading="lazy"
+      width="1024"
+      height="1024"
     />
 
     <!-- Texto -->
