--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,8 @@ const purple = "#4B44E7";
   <nav class="mx-auto flex max-w-6xl items-center justify-between px-4 py-3">
     <!-- Brand -->
     <a href="#inicio" class="flex items-center gap-2">
-      <img src="/logo.png" alt="Logo" class="h-8 w-auto" />
+      <img src="/img/logo.webp" alt="ad global pay logo" class="h-8 w-auto" width="500"
+      height="500"/>
       <span class="text-xl font-bold text-gray-900">AD Global Pay</span>
     </a>
 
