--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,14 +1,16 @@
 ---
 import "../styles/global.css";
-const { title = "Sitio", description = "" } = Astro.props;
+const { title = "Cambia Zelle a Bolívares en minutos | AD Global Pay", description = "Cambia tu saldo de USD a bolívares de forma rápida, segura y confiable. AD Global Pay te ofrece las mejores tasas y atención personalizada, comunicate ya!" } = Astro.props;
 ---
 <html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>{title}</title>
-      <link rel="icon" href="/logo.png" type="image/x-icon" />
+      <link rel="icon" href="/img/logo.webp" type="image/x-icon" />
     <meta name="description" content={description} />
+    <!-- Canonical -->
+  <link rel="canonical" href="https://www.adglobalpay.com/" />
   </head>
   <body class="min-h-dvh bg-white text-gray-900 antialiased">
     <slot />
