--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,8 +11,32 @@ const { title = "Cambia Zelle a Bolívares en minutos | AD Global Pay", descript
     <meta name="description" content={description} />
     <!-- Canonical -->
   <link rel="canonical" href="https://www.adglobalpay.com/" />
-  </head>
+  {/* Google Tag Manager (inline, sin hidratar) */}
+    <script is:inline>
+      {`
+        window.dataLayer = window.dataLayer || [];
+        window.dataLayer.push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        (function(w,d,s,l,i){ w[l]=w[l]||[];
+          var f=d.getElementsByTagName(s)[0],
+              j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
+          j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+          f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','${GTM_ID}');
+      `}
+    </script>
+    {/* /GTM */}
+</head>
+
+
   <body class="min-h-dvh bg-white text-gray-900 antialiased">
+     {/* Google Tag Manager (noscript) – debe ir inmediatamente después de <body> */}
+    <noscript>
+      <iframe
+        src={`https://www.googletagmanager.com/ns.html?id=${GTM_ID}`}
+        height="0" width="0" style="display:none;visibility:hidden"
+      ></iframe>
+    </noscript>
+    {/* /GTM noscript */}
     <slot />
   </body>
 </html>
