--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,10 +14,10 @@
     <!-- Texto -->
     <div class="text-center md:text-left">
       <h1 class="text-4xl sm:text-5xl md:text-6xl/tight font-bold drop-shadow-lg">
-        Cambia tu saldo USD a bolívares en minutos
+        Cambia tu saldo USD a Bs.S en minutos
       </h1>
       <p class="mt-3 sm:mt-4 text-blue-100 drop-shadow-md">
-        ¿Quieres cambiar o vender Zelle a bolívares fácilmente?
+        ¿Quieres cambiar o vender Zelle a Bs.S fácilmente?
       </p>
 
       <div class="mt-5 sm:mt-6 flex flex-col sm:flex-row gap-3 sm:justify-start items-stretch sm:items-center">
