--- a/src/components/PaypalToVESHero.astro
+++ b/src/components/PaypalToVESHero.astro
@@ -1,7 +1,7 @@
 ---
 const whatsappNumber = "14482045984";
 const whatsappMessage = encodeURIComponent(
-  "Hola, quiero cambiar dólares PayPal por bolívares. ¿Me puedes dar más información?"
+  "Hola, quiero cambiar dólares PayPal por Bs.S. ¿Me puedes dar más información?"
 );
 const whatsappLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
 ---
@@ -11,7 +11,7 @@ const whatsappLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
     <!-- Texto -->
     <div>
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-tight text-slate-800 tracking-tight">
-        Cómo cambiar o vender los <span class="text-slate-900">dólares</span> por <span class="text-slate-900">Bolívares</span> en Venezuela
+        Cómo cambiar o vender los <span class="text-slate-900">dólares</span> por <span class="text-slate-900">Bs.S</span> en Venezuela
       </h2>
 
       <p class="mt-6 text-base sm:text-lg text-slate-600 max-w-prose">
@@ -53,7 +53,7 @@ const whatsappLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
       </div>
       <img
         src="/img/changes.webp"
-        alt="Cambiando saldo Dólares a Bolívares en computadora"
+        alt="Cambiando saldo Dólares a Bs.S en computadora"
         class="mx-auto max-w-full h-auto drop-shadow-xl"
         loading="lazy"
         width="1080"
