--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,43 +1,27 @@
 ---
+// src/layouts/Base.astro
 import "../styles/global.css";
-const {
-  title = "Cambia Zelle a Bolívares en minutos | AD Global Pay",
-  description = "Cambia tu saldo de USD a bolívares de forma rápida, segura y confiable. AD Global Pay te ofrece las mejores tasas y atención personalizada, comunicate ya!"
-} = Astro.props;
+import Navbar from '../components/Navbar.tsx'; //
 
-// usa env si prefieres: const GTM_ID = import.meta.env.PUBLIC_GTM_ID;
-const GTM_ID = "GTM-TMP3GC84";
+const {
+  title = "Cambia Zelle a Bs.S en minutos | AD Global Pay",
+  description = "Cambia tu saldo de USD a Bs.S de forma rápida, segura y confiable."
+} = Astro.props;
 ---
 
-<html lang="es">
+<html lang="es" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>{title}</title>
     <link rel="icon" href="/img/logo.webp" type="image/x-icon" />
-    <meta name="description" content={description} />
-    <link rel="canonical" href="https://www.adglobalpay.com/" />
-
-    <!-- Google Tag Manager -->
-    <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TMP3GC84');
-    </script>
-    <!-- End Google Tag Manager -->
   </head>
 
-  <body class="min-h-dvh bg-white text-gray-900 antialiased">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TMP3GC84"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+  <body class="min-h-dvh bg-white text-gray-900 antialiased pt-20">
+    <Navbar client:only="react" />
 
-
-    <slot />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
