--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Base from "../layouts/Base.astro";
-import Navbar from "../components/Navbar.astro";
+import Navbar from "../components/Navbar.tsx";
 import Hero from "../components/Hero.astro";
 import Process from "../components/Process.astro";
 import Testimonials from "../components/Testimonials.astro";
@@ -22,7 +22,6 @@ const stats = [
 ];
 ---
 <Base title="Cambia Zelle a Bolivares">
-  <Navbar />
   <Hero />
   <ServicesGrid />
   <PaypalToVESHero />
@@ -32,6 +31,6 @@ const stats = [
   <About />
   <FAQ />
   <Footer />
-   <!-- Botón flotante de WhatsApp -->
+  <!-- Botón flotante de WhatsApp -->
   <WhatsAppFloat />
 </Base>
