--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 const whatsappNumber = "14482045984";
-const whatsappMessage = encodeURIComponent("Hola, quiero más información sobre sus servicios.");
+const whatsappMessage = encodeURIComponent("🌐 Hola Global Team me gustaria enviar dinero a Venezuela");
 const waLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
 
 // Opcional: año dinámico
