--- a/src/components/ShareButton.astro
+++ b/src/components/ShareButton.astro
@@ -13,7 +13,14 @@
   </button>
 
   <div id="socialMenu" class="social-drawer">
-    <a href="https://api.whatsapp.com/send?text=Cambia%20tu%20Zelle%20rápido%20en%20AD%20Global%20Pay%20https://adglobalpay.com" target="_blank" class="drawer-item"><img src="/img/wa.png" alt="WA" /></a>
+    <a 
+      href="https://wa.me/14482045984?text=%F0%9F%8C%90%20Hola%20Global%20Team%2C%20me%20gustaria%20cambiar%20mis%20divisas%20en%20AD%20Global%20Pay" 
+      target="_blank" 
+      rel="noopener noreferrer"
+      class="drawer-item"
+    >
+      <img src="/img/wa.png" alt="WA" />
+    </a>
     <a href="https://www.facebook.com/sharer/sharer.php?u=https://adglobalpay.com" target="_blank" class="drawer-item"><img src="/img/fb.png" alt="FB" /></a>
     <a href="https://www.instagram.com/adglobalpay" target="_blank" class="drawer-item"><img src="/img/in.png" alt="IG" /></a>
   </div>
