--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -18,9 +18,21 @@ const {
     <title>{title}</title>
     <meta name="description" content={description} />
     <link rel="icon" href="/img/logo.webp" type="image/x-icon" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TMP3GC84');
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
 
   <body class="min-h-dvh bg-white text-gray-900 antialiased pt-20">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TMP3GC84"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <Navbar client:only="react" />
 
     <main>
