--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 const title = "¿Qué es AD GLOBAL PAY?";
 const whatsappNumber = "14482045984";
 const whatsappMessage = encodeURIComponent(
-  "🌐 Hola Global Team me gustaria enviar dinero a Venezuela"
+  "🌐 Hola Global Team me gustaria transferir"
 );
 const ctaHref = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
 ---
