--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,7 +1,7 @@
 ---
 const whatsappNumber = "14482045984";
 const whatsappMessage = encodeURIComponent(
-  "🌐 Hola Global Team me gustaria enviar dinero a Venezuela"
+  "🌐 Hola Global Team me gustaria enviar transferir"
 );
 const waLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
 
