--- a/src/components/ShareButton.astro
+++ b/src/components/ShareButton.astro
@@ -14,7 +14,7 @@
 
   <div id="socialMenu" class="social-drawer">
     <a 
-      href="https://wa.me/14482045984?text=%F0%9F%8C%90%20Hola%20Global%20Team%2C%20me%20gustaria%20cambiar%20mis%20divisas%20en%20AD%20Global%20Pay" 
+      href="https://wa.me/14482045984?text=%F0%9F%8C%90%20Hola%20Global%20Team%2C%20me%20gustaria%20transferir" 
       target="_blank" 
       rel="noopener noreferrer"
       class="drawer-item"
