--- a/src/components/WhatsAppFloat.astro
+++ b/src/components/WhatsAppFloat.astro
@@ -1,6 +1,6 @@
 ---
 const PHONE = "14482045984";
-const message = encodeURIComponent("🌐 Hola Global Team me gustaria enviar dinero a Venezuela");
+const message = encodeURIComponent("🌐 Hola Global Team me gustaria transferir");
 const waLink = `https://wa.me/${PHONE}?text=${message}`;
 ---
 
