--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@
 
       <div class="mt-5 sm:mt-6 flex flex-col sm:flex-row gap-3 sm:justify-start items-stretch sm:items-center">
       <a
-        href="https://wa.me/14482045984?text=%F0%9F%8C%90%20Hola%20Global%20Team%20me%20gustaria%20enviar%20dinero%20a%20Venezuela"
+        href="https://wa.me/14482045984?text=%F0%9F%8C%90%20Hola%20Global%20Team%20me%20gustaria%20transferir"
         target="_blank" 
         rel="noopener noreferrer"
         class="inline-flex justify-center items-center gap-2 rounded-2xl bg-green-500 px-5 py-3 sm:px-6 font-semibold shadow-lg shadow-green-800/30 hover:bg-green-400 hover:scale-[1.02] transition-all duration-300 w-full sm:w-auto"
