--- a/src/components/PaypalToVESHero.astro
+++ b/src/components/PaypalToVESHero.astro
@@ -1,7 +1,7 @@
 ---
 const whatsappNumber = "14482045984";
 const whatsappMessage = encodeURIComponent(
-  "🌐 Hola Global Team me gustaria enviar dinero a Venezuela"
+  "🌐 Hola Global Team me gustaria transferir"
 );
 const whatsappLink = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
 ---
